<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="360dp"
        android:layout_height="500dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_productos"
        android:layout_width="150sp"
        android:layout_height="30sp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="35dp"
        android:text="@string/productos"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/text_view_necesitar"
        android:layout_width="100sp"
        android:layout_height="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="124dp"
        android:text="@string/necesitado"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/text_view_comprar"
        android:layout_width="100sp"
        android:layout_height="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="14dp"
        android:text="@string/comprar"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>